node editor: nodes scaled wrong when some in a frame, some not #39455

Closed
opened 2014-03-27 13:50:40 +01:00 by Michael Otto · 8 comments

System Information
Operating system and graphics card

Blender Version
Broken: (2.7)
Worked: (2.69)

Short description of error

if you put a node in a frame, another node outside, and try to align them by scaling to zero, the nodes in the frame seem to move relative to some frame-relative oordinate system.

Not sure if theis is intentional, but in case it's not, things are easier to handle if everything scales "relative to the canvas"

Exact steps for others to reproduce the error

See above (reproducing is so easy that no blend file is needed)

**System Information** Operating system and graphics card **Blender Version** Broken: (2.7) Worked: (2.69) **Short description of error** if you put a node in a frame, another node outside, and try to align them by scaling to zero, the nodes in the frame seem to move relative to some frame-relative oordinate system. Not sure if theis is intentional, but in case it's not, things are easier to handle if everything scales "relative to the canvas" **Exact steps for others to reproduce the error** See above (reproducing is so easy that no blend file is needed)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelOtto

Added subscriber: @MichaelOtto
Lukas Tönne was assigned by Sergey Sharybin 2014-03-28 09:12:58 +01:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

@LukasTonne, mind checking on this one? :)

@LukasTonne, mind checking on this one? :)

This issue was referenced by blender/blender-addons-contrib@29888dcea0

This issue was referenced by blender/blender-addons-contrib@29888dcea0519ebe5873db7de5a6667414153ee9

This issue was referenced by 29888dcea0

This issue was referenced by 29888dcea0519ebe5873db7de5a6667414153ee9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 29888dcea0.

Closed by commit 29888dcea0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39455
No description provided.